K8s/Project/leaderboard-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leaderboard-service
  namespace: game-server
spec:
  selector:
    app: leaderboard-service
  ports:
    - name: grpc
      port: 50055
      targetPort: 50055
  type: ClusterIP
